# entry_kalibrasi

./: .env.example  .env.keys  .gitignore  ALERT_FUNCTION_ERROR_FIX.md  API_DOCUMENTATION.md  CERTIFICATE_FUNCTIONALITY_FIX.md  CERTIFICATE_PREVIEW_ERROR_FIX.md  CERTIFICATE_PREVIEW_TO_DRAFT.md  CERTIFICATE_VERIFICATION.md  CERTIFICATE_VERIFICATION_RESET_FIX.md  CONDITIONAL_TABLE_IMAGE_FEATURE.md  EMAIL_CONFIRMATION_SETUP.md  FIX_IMAGES_ITERABLE_ERROR.md  FLEXIBLE_MULTI_SENSOR_SYSTEM.md  INSTRUMENTS_CRUD_UPDATE.md  INSTRUMENTS_UI_UX_IMPROVEMENTS.md  MODAL_SCROLL_BUTTON_FIX.md  MULTIPLE_TABLE_OBJECTS_FIX.md  NOTES_DATA_FLOW_DEBUG.md  NOTES_DEBUG_INVESTIGATION.md  NOTES_DISPLAY_FIX_FINAL.md  PAGINATION_FIX.md  PAGINATION_LAYOUT_FIX.md  README.md  REVERT_TO_SUPABASE.md  SEARCH_FUNCTIONALITY_FIX.md  SENSOR_DELETE_FEATURE.md  SIDEBAR_SENSOR_REMOVAL.md  SMART_PAGINATION_FIX.md  STATION_PAGINATION_FIX_COMPLETE.md  SUPABASE_EMAIL_CONFIG.md  SUPABASE_EMAIL_FIX.md  SUPABASE_SETUP.md  TABLE_DATA_STRUCTURE_FIX.md  TABLE_FORMAT_IMPROVEMENT.md  TESTING_DOCUMENTATION.md  TESTING_FINAL_STATUS.md  TESTING_FINAL_SUCCESS.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_README.md  (+52 more)
services/pdf-template-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/pdf-template-service/app/: __init__.py  config.py  exceptions.py  main.py
services/pdf-template-service/scripts/: create_sample_templates.py
services/pdf-template-service/tests/: __init__.py  test_health.py  test_pdf_merger.py  test_preview.py  test_preview_cache.py  test_upload.py  (+1 more)
(+488 files in other folders)
